[package]
name = "ssh_auth_podman_push"
# binary executable does not need to be SemVer, because nobody depends on it
version = "1.1.1"
description = "Store and use encrypted docker-hub secret_token with SSH key"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/CRUSTDE-ContainerizedRustDevEnv/ssh_auth_podman_push"
# Keyword must be only one word: lowercase letters, hyphens(-) or numbers, less then 35 characters, at most 5 keywords per crate
keywords = ["work-in-progress", "rustlang", "docker-hub"]
categories = ["command-line-interface"]
# publish as a cargo tool. Only this files.
publish = true
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/*"
]

[dependencies]
# SemVer rules: Major version zero (0.y.z) is for initial development. Anything MAY change at any time. The public API SHOULD NOT be considered stable.
# WARNING: Although dependecies in Cargo.toml look like a specific version of the crate, they are just like a carret version (^x.y.z) and actually specify 
# the minimum version and allow automatic SemVer compatible updates up to a MAJOR increment! Always check the true version with `cargo tree`!
cargo_auto_lib="2.4.3"
cargo_auto_encrypt_secret_lib = "1.1.4"

log = "0.4"
pretty_env_logger="0.5.0"
thiserror = "1.0.30"
anyhow="1.0.56"
secrecy="0.8.0"
inquire="0.7.4"
base64ct="1.6.0"
aes-gcm="0.10.3"
rsa="0.9.6"
camino="1.1.6"
ssh-key="0.6.6"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std", "fmt", "time"] }
tracing-appender="0.2.2"
time = {version="0.3.36", features=["macros","local-offset"]}

[lib]
name = "ssh_auth_podman_push_lib"
path = "src/lib.rs"
# A flag for enabling documentation of this target. This is used by `cargo doc`.
doc = true

[[bin]]
name = "ssh_auth_podman_push"
path = "src/bin/ssh_auth_podman_push/main.rs"
# A flag for enabling documentation of this target. This is used by `cargo doc`.
doc = true
