[package]
name = "ssh_auth_podman_push"
# binary executable does not need to be SemVer, because nobody depends on it
version = "1.1.10"
description = "Store and use encrypted docker-hub secret_token with SSH key"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/CRUSTDE-ContainerizedRustDevEnv/ssh_auth_podman_push"
# Keyword must be only one word: lowercase letters, hyphens(-) or numbers, less then 35 characters, at most 5 keywords per crate
keywords = ["work-in-progress", "rustlang", "docker-hub"]
categories = ["command-line-interface"]
# publish as a cargo tool. Only this files.
publish = true
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/*"
]

# SemVer rules: Major version zero (0.y.z) is for initial development. Anything MAY change at any time. The public API SHOULD NOT be considered stable.
# WARNING: Although dependencies in Cargo.toml look like a specific version of the crate, they are just like a caret version (^x.y.z) and actually specify 
# the minimum version and allow automatic SemVer compatible updates up to a MAJOR increment! Always check the true version with `cargo tree`!
[dependencies]
cargo_auto_lib = "3.0.14"

log = "0.4.27"
pretty_env_logger="0.5.0"
thiserror = "2.0.12"
anyhow="1.0.97"
secrecy="0.10.3"
inquire="0.7.5"
base64ct="1.7.3"
aes-gcm="0.10.3"
rsa="0.9.8"
camino="1.1.9"
ssh-key = { version = "0.6.7", features = [ "rsa", "encryption","ed25519"] }
serde ={ version= "1.0.219", features=["std","derive"]}
serde_json = "1.0.140"
ssh_agent_client_rs_git_bash = "0.0.14"
# reqwest 0.12.12 is tha last that builds in win-git-bash
reqwest={version="=0.12.12", features=["json","stream", "blocking"]}
home="0.5.11"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std", "fmt", "time"] }
tracing-appender="0.2.3"
time = {version="0.3.41", features=["macros","local-offset"]}

[lib]
name = "ssh_auth_podman_push_lib"
path = "src/lib.rs"
# A flag for enabling documentation of this target. This is used by `cargo doc`.
doc = true

[[bin]]
name = "ssh_auth_podman_push"
path = "src/bin/ssh_auth_podman_push/main.rs"
# A flag for enabling documentation of this target. This is used by `cargo doc`.
doc = true
